created get posts by group
